--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,91 @@
-<p>home works!</p>
+<div class="container-fluid" id="div-busqueda" style="background-image:url('../../../assets/img/fondo2.png');">
+  <span clas="container">
+    <span class="centrar mb-3">
+      <h1 class="centrar rounded bg-light mw-100 p-2"><strong class="busqueda">BUSCAR EMPLEO</strong></h1>
+    </span>
+  </span>
+
+  <span class="container centrar">
+    <form class="rounded d-flex bg-light mw-100 p-2">
+      <input class="form-control me-2 ancho" type="search" placeholder="Puesto, empresa o palabra clave" aria-label="Search">
+      <button class="btn btn-primary" type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>
+      </button>
+    </form>
+  </span>
+
+  <span class="container-fluid">
+      <span class="centrar">
+        <p class="rounded centrar bg-light mw-100 p-1"><b class="busqueda centrar">Encuentre su nueva pasión, trabajo en Argentina.</b> </p>
+      </span>
+  </span>
+
+</div>
+
+<div class="container-fluid p-2" id="¿Quiénes-somos?">
+  <div class="container-fluid mt-5">
+    <h1 class="centrar p-2 " ><b class="busqueda">¿Quiénes somos?</b></h1>
+    <p class="container">
+      B-Inclusive es una web de empleo en Argentina fundada el 8 de febrero del 2022. Actualmente, la bolsa de trabajo opera exclusivamente en territorio nacional, pero tiene planeado expandirse a corto plazo.
+      Tenemos convenio con numerosas empresas prestigiosas como pueden ser Amazon, Apple o Movistar, y existe una gran variedad en los tipos de trabajos que se encuentran publicados en la web.
+      <br>
+      <br>
+      Contamos con un grupo reducido de cinco programadores que se encargan del mantenimiento y actualizaciones de la aplicación. La página se encuentra de momento en su versión 1.0, y se espera que para el mes de Abril ya esté totalmente terminada. 
+      <br>
+      <br>
+      Esperamos que su estadía en el sitio sea placentera, y si quieren comunicarse con nosotros pueden hacerlo enviando un correo a la siguiente dirección: <a href="">informacion@binclusive.com</a>
+    </p>
+</div>
+</div>
+
+<div class="container-fluid p-2" id="Nuestro-objetivo">
+  <div class="container-fluid mt-2">
+    <h1 class="centrar p-2"><b class="busqueda">Nuestro Objetivo</b></h1>
+    <p class="container">
+      El objetivo de B-Inclusive es crear una bolsa de trabajo libre de todo prejucio negativo hacia cualquier etnia, sexo, idioma, religión, opinión política o de cualquier otra índole, origen nacional o social, posición económica, nacimiento o cualquier otra condición. Nuestros principales valores son el respeto y la honestidad. Por eso mismo, buscamos que tanto postulantes como empleadores sean respetuosos el uno con el otro, y mantengan un trato cordial.
+    </p>
+  </div>
+</div>
+
+<div class="container pb-5 p-2" id="FAQs">
+  <h1 class="centrar p-2" ><b class="busqueda">FAQs</b></h1>
+  <div class="accordion" id="accordionPanelsStayOpenExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
+          ¿Cómo crear un usuario?
+        </button>
+      </h2>
+      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+        <div class="accordion-body">
+          Para crear un usuario, usted debe pulsar en el icono azul que figura a la derecha de la barra de navegación, representado con la figura de una persona. Acto seguido, se desplegará una columna a la derecha de la pantalla, y se le mostrarán dos opciones: iniciar sesión y crear cuenta. Usted debe seleccionar la opción de crear cuenta y será redirigido a un formulario.
+            Allí debe completar los campos obligatorios (marcados con un asterico) y completarlos con sus datos personales. Una vez hecho esto, pulse en el botón "aceptar". Si ha completado los campos correctamente, una alerta le informara que la creación de la cuenta fue exitosa.
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+            ¿Cómo postularse a un empleo?
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+          <div class="accordion-body">
+            Para postularse a un empleo, usted debe en primer instancia tener una cuenta en la página. Una vez que ya haya creado su perfil, simplemente tiene que dirigirse a la sección de empleos que figura en la barra de navegación. Allí debe elegir la oferta de trabajo que le interese y presionar en el botón "postular". De esta forma, le saldrá una alerta informando que su postulación fue exitosa.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+            ¿Cómo reviso las postulaciones a mi oferta de empleo si soy empresa?
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+          <div class="accordion-body">
+            Para revisar las postulaciones de su oferta de empleo, usted tiene que iniciar sesión con la cuenta que creó su empresa. Una vez que lo haya hecho, pulse en el icono azul que figura a la derecha de la barra de navegación, representado con la figura de una persona. Acto seguido, se desplegará una columna a la derecha de la pantalla en la que habrán tres opciones, haga clic en la segunda, llamada "Administración Empresa". Allí, usted tendrá la posibilidad de revisar los datos de su empresa, las ofertas de empleo que tiene activas, y las postulaciones a estas. Una vez que esté en el apartado de postulaciones, ya podrá ver los perfiles de los distintos candidatos.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
